--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,74 @@
-paste your fbstate c3c cookie here...
+[
+	{
+		"key": "sb",
+		"value": "eEF2aJBHZ3kzDwJhpXxOO11O",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.772Z",
+		"lastAccessed": "2025-07-22T04:32:36.778Z"
+	},
+	{
+		"key": "vpd",
+		"value": "v1%3B600x360x3",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.779Z",
+		"lastAccessed": "2025-07-22T04:32:36.779Z"
+	},
+	{
+		"key": "pas",
+		"value": "100090273693443%3AsGhb8OKqVQ",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.779Z",
+		"lastAccessed": "2025-07-22T04:32:36.779Z"
+	},
+	{
+		"key": "c_user",
+		"value": "100090273693443",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.779Z",
+		"lastAccessed": "2025-07-22T04:32:36.779Z"
+	},
+	{
+		"key": "xs",
+		"value": "23%3A7IN8tlm_l09dHg%3A2%3A1753146808%3A-1%3A-1",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.779Z",
+		"lastAccessed": "2025-07-22T04:32:36.779Z"
+	},
+	{
+		"key": "fr",
+		"value": "0yKxDrzAeEgPLtkVE.AWfjuqXulFQn1O-mC5QpxWln8IXyIKjVghpfdWtw_QGecaKjddo.BodkF4..AAA.0.0.BofuW5.AWc_y__n-TKtCuxDkNgARCd2BLo",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.779Z",
+		"lastAccessed": "2025-07-22T04:32:36.779Z"
+	},
+	{
+		"key": "fbl_st",
+		"value": "101526614%3BT%3A29219113",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.779Z",
+		"lastAccessed": "2025-07-22T04:32:36.779Z"
+	},
+	{
+		"key": "wl_cbv",
+		"value": "v2%3Bclient_version%3A2877%3Btimestamp%3A1753146810",
+		"domain": "facebook.com",
+		"path": "/",
+		"hostOnly": false,
+		"creation": "2025-07-22T04:32:36.779Z",
+		"lastAccessed": "2025-07-22T04:32:36.779Z"
+	}
+    ]
