--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+   timeout-minutes: 1200 
     strategy:
       matrix:
         node-version: [20.x]
